# wind-farm-ppo-sagemaker

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
DTUWindGym.egg-info/: PKG-INFO  top_level.txt
sagemaker/: hyperparameters.json
scripts/: build_push.sh  ec2_launcher.py  setup_env.sh  training_job.py
src/: train_sagemaker.py  utils.py
